Fix button zoom getting stuck

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .toasty{
 background: rgba(0, 0, 0, 0.7);
-width: 200px;
+font-family: monospace;
+width: 240px;
 padding: 4px;
 color: #fff;
 border-radius: 20px;
@@ -21,6 +22,7 @@ transition-duration: 0.2s;
 }
 
 button{
+	font-family: monospace;
 	outline: none;
 	vertical-align: middle;
 	font-size: 16px;
@@ -36,7 +38,7 @@ button{
 	transition-duration: 0.2s;
 }
 
-button:hover,button:focus{
+button:hover{
 	box-shadow: 0px 2px 10px -3px rgba(0, 0, 0, 0.75);
 	transform: scale(1.05,1.05);
 }
